# xarray-indexes

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.md
docs/_static/: style.css
docs/agnostic/: pint.md  xdggs.md
docs/blocks/: ndpoint.md  transform.md  why-trees.md
docs/builtin/: cfinterval.ipynb  pandas.md  pdindex.md  pdinterval.md  pdmultiindex.md  pdrange.md  range.md
docs/earth/: cfvertical.md  forecast.ipynb  forecast.md  raster.md  xdggs.md  xproj.md  xvec.md
